Fix nav on mobile

--- a/src/less/elements/menu-sidebar.less
+++ b/src/less/elements/menu-sidebar.less
@@ -76,5 +76,13 @@
         transform: translate3d(-200px, 0, 0);
     }
 
+    .navbar .nav .dropdown-menu>li>a {
+        color:#fff;
+    }
+
+    .dropdown-menu>li>a:hover {
+        background: #3e4148;
+    }
+
 }
 
